kasa-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kasa-exporter
  name: kasa-exporter
spec:
  ports:
    - name: kasa
      port: 9233
      protocol: TCP
  selector:
    io.kompose.service: kasa-exporter
  type: LoadBalancer
status:
  loadBalancer: {}
