kasa-exporter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kasa-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
  labels:
    app: kasa-exporter
spec:
  rules:
    - host: kasa.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kasa-exporter
                port:
                  number: 9233
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kasa-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: ca-issuer
  labels:
    app: kasa-exporter
spec:
  rules:
    - host: kasa.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kasa-exporter
                port:
                  number: 9233
  tls:
    - hosts:
        - kasa.celestium.life
      secretName: kasa-cert
